deployment/nginx-deployment-1.20.2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vassilis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: vassilis
  labels:
    app: be
    coffee: esspresso
spec:
  strategy:
    type: RollingUpdate

  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: my-nginx
          image: vassilisacr.azurecr.io/nginx:1.20.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "400m"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 1
      imagePullSecrets:
        - name: docker-key
