deployment/nginx-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vassilis

---
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx
  namespace: vassilis
spec:
  containers:
    - name: my-nginx
      image: vassilisacr.azurecr.io/nginx:1.21.6
      ports:
        - containerPort: 80
      readinessProbe:
        httpGet:
          path: /index.html
          port: 80
        initialDelaySeconds: 15
        periodSeconds: 5
        failureThreshold: 1
      livenessProbe:
        httpGet:
          path: /index.html
          port: 80
        initialDelaySeconds: 3
        periodSeconds: 5
        failureThreshold: 1
  imagePullSecrets:
    - name: docker-key
